fix: optimize CI workflow glob path triggers for granular dependency tracking
Replaced overly broad glob patterns with precise path filters.

Critical Fixes:
- ci-go.yaml: Replace crates/** (too broad) with specific crates
- ci-validate.yaml: Replace wildcards with explicit paths

Optimizations:
- ci-rust.yaml: scripts/** → scripts/ci/rust/**
- ci-python.yaml: scripts/** → scripts/ci/python/**
- ci-node.yaml: scripts/** → scripts/ci/node/**
- ci-ruby.yaml: scripts/** → scripts/ci/ruby/**
- ci-java.yaml: scripts/** → scripts/ci/java/**
- ci-wasm.yaml: scripts/** → scripts/ci/wasm/**
- ci-csharp.yaml: scripts/** → scripts/ci/csharp/**

Benefits:
- Reduced unnecessary CI runs when unrelated code changes
- Faster feedback loops for developers
- Clearer dependency documentation
- Lower GitHub Actions minutes consumption

Impact:
- Go workflow no longer triggers on Python/TypeScript changes
- Validate workflow explicitly lists all affected paths
- Language-specific scripts scoped to their workflows

--- a/.github/workflows/ci-csharp.yaml
+++ b/.github/workflows/ci-csharp.yaml
@@ -5,7 +5,6 @@ on:
     branches: [main]
     paths:
       - '.github/actions/**'
-      - 'scripts/**'
       - 'crates/kreuzberg/**'
       - 'crates/kreuzberg-ffi/**'
       - 'crates/kreuzberg-tesseract/**'
@@ -18,13 +17,13 @@ on:
       - 'Cargo.lock'
       - 'packages/csharp/**/*.csproj'
       - 'e2e/csharp/**/*.csproj'
+      - 'scripts/ci/csharp/**'
       - '.github/workflows/ci-csharp.yaml'
       - '.cargo/config.toml'
   pull_request:
     branches: [main]
     paths:
       - '.github/actions/**'
-      - 'scripts/**'
       - 'crates/kreuzberg/**'
       - 'crates/kreuzberg-ffi/**'
       - 'crates/kreuzberg-tesseract/**'
@@ -37,6 +36,7 @@ on:
       - 'Cargo.lock'
       - 'packages/csharp/**/*.csproj'
       - 'e2e/csharp/**/*.csproj'
+      - 'scripts/ci/csharp/**'
       - '.github/workflows/ci-csharp.yaml'
       - '.cargo/config.toml'
 
