--- a/.github/workflows/ci-java.yaml
+++ b/.github/workflows/ci-java.yaml
@@ -5,7 +5,6 @@ on:
     branches: [main]
     paths:
       - '.github/actions/**'
-      - 'scripts/**'
       - 'crates/kreuzberg/**'
       - 'crates/kreuzberg-ffi/**'
       - 'crates/kreuzberg-tesseract/**'
@@ -17,13 +16,13 @@ on:
       - 'Cargo.toml'
       - 'Cargo.lock'
       - 'packages/java/pom.xml'
+      - 'scripts/ci/java/**'
       - '.github/workflows/ci-java.yaml'
       - '.cargo/config.toml'
   pull_request:
     branches: [main]
     paths:
       - '.github/actions/**'
-      - 'scripts/**'
       - 'crates/kreuzberg/**'
       - 'crates/kreuzberg-ffi/**'
       - 'crates/kreuzberg-tesseract/**'
@@ -35,6 +34,7 @@ on:
       - 'Cargo.toml'
       - 'Cargo.lock'
       - 'packages/java/pom.xml'
+      - 'scripts/ci/java/**'
       - '.github/workflows/ci-java.yaml'
       - '.cargo/config.toml'
 
