--- a/.github/workflows/ci-python.yaml
+++ b/.github/workflows/ci-python.yaml
@@ -5,7 +5,6 @@ on:
     branches: [main]
     paths:
       - '.github/actions/**'
-      - 'scripts/**'
       - 'crates/kreuzberg/**'
       - 'crates/kreuzberg-py/**'
       - 'crates/kreuzberg-tesseract/**'
@@ -18,13 +17,13 @@ on:
       - 'Cargo.lock'
       - 'uv.lock'
       - 'pyproject.toml'
+      - 'scripts/ci/python/**'
       - '.github/workflows/ci-python.yaml'
       - '.cargo/config.toml'
   pull_request:
     branches: [main]
     paths:
       - '.github/actions/**'
-      - 'scripts/**'
       - 'crates/kreuzberg/**'
       - 'crates/kreuzberg-py/**'
       - 'crates/kreuzberg-tesseract/**'
@@ -37,6 +36,7 @@ on:
       - 'Cargo.lock'
       - 'uv.lock'
       - 'pyproject.toml'
+      - 'scripts/ci/python/**'
       - '.github/workflows/ci-python.yaml'
       - '.cargo/config.toml'
 
