--- a/.github/workflows/ci-ruby.yaml
+++ b/.github/workflows/ci-ruby.yaml
@@ -5,7 +5,6 @@ name: CI Ruby
     branches: [main]
     paths:
       - '.github/actions/**'
-      - 'scripts/**'
       - 'crates/kreuzberg/**'
       - 'crates/kreuzberg-ffi/**'
       - 'crates/kreuzberg-tesseract/**'
@@ -19,13 +18,13 @@ name: CI Ruby
       - 'Gemfile'
       - 'Gemfile.lock'
       - 'packages/ruby/Rakefile'
+      - 'scripts/ci/ruby/**'
       - '.github/workflows/ci-ruby.yaml'
       - '.cargo/config.toml'
   pull_request:
     branches: [main]
     paths:
       - '.github/actions/**'
-      - 'scripts/**'
       - 'crates/kreuzberg/**'
       - 'crates/kreuzberg-ffi/**'
       - 'crates/kreuzberg-tesseract/**'
@@ -39,6 +38,7 @@ name: CI Ruby
       - 'Gemfile'
       - 'Gemfile.lock'
       - 'packages/ruby/Rakefile'
+      - 'scripts/ci/ruby/**'
       - '.github/workflows/ci-ruby.yaml'
       - '.cargo/config.toml'
 
