fix: add version requirement to kreuzberg dependency in cli crate
crates.io requires all published crates to have explicit version
requirements on their dependencies. the cli crate's kreuzberg dependency
was specified with only a path reference, causing publish verification
to fail.

--- a/crates/kreuzberg-cli/Cargo.toml
+++ b/crates/kreuzberg-cli/Cargo.toml
@@ -13,7 +13,7 @@ keywords = ["document", "extraction", "cli", "tool", "parser"]
 categories = ["command-line-utilities", "text-processing"]
 
 [dependencies]
-kreuzberg = { path = "../kreuzberg", features = ["full"] }
+kreuzberg = { version = "4.0.0-rc.10", path = "../kreuzberg", features = ["full"] }
 clap = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
