fix: resolve CI publish and benchmark workflow failures
Publish workflow fixes:
- WASM: Add type: module to package.json for ES6 module support
- Node: Fix platform mismatch by only declaring 3 built targets
- C#: Remove obsolete ONNX Runtime verification checks
- Ruby: Regenerate vendored crates with workspace dependencies

Benchmark workflow fixes:
- Go: Fix working directory path packages/go → packages/go/v4
- Ruby: Workspace dependency resolution via vendoring script

Code quality:
- Shell: Replace ls with find for ShellCheck SC2012 compliance

--- a/.github/workflows/benchmarks.yaml
+++ b/.github/workflows/benchmarks.yaml
@@ -815,7 +815,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.25.x"
-          cache-dependency-path: packages/go/go.sum
+          cache-dependency-path: packages/go/v4/go.sum
 
       - name: Setup ONNX Runtime
         uses: ./.github/actions/setup-onnx-runtime
@@ -823,7 +823,7 @@ jobs:
           ort-version: ${{ env.ORT_VERSION }}
 
       - name: Prime Go modules
-        working-directory: packages/go
+        working-directory: packages/go/v4
         run: go mod download
 
       - name: Build Go bindings
@@ -889,7 +889,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.25.x"
-          cache-dependency-path: packages/go/go.sum
+          cache-dependency-path: packages/go/v4/go.sum
 
       - name: Setup ONNX Runtime
         uses: ./.github/actions/setup-onnx-runtime
@@ -897,7 +897,7 @@ jobs:
           ort-version: ${{ env.ORT_VERSION }}
 
       - name: Prime Go modules
-        working-directory: packages/go
+        working-directory: packages/go/v4
         run: go mod download
 
       - name: Build Go bindings
