--- a/crates/kreuzberg-wasm/package.json
+++ b/crates/kreuzberg-wasm/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@kreuzberg/wasm",
 	"version": "4.0.0-rc.10",
+	"type": "module",
 	"packageManager": "pnpm@10.17.0",
 	"description": "Kreuzberg document intelligence - WebAssembly bindings",
 	"author": {
