--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -924,20 +924,33 @@ jobs:
         shell: bash
         run: |
           cd packages/ruby/pkg
+          echo "=== Gem Files in pkg directory ==="
+          ls -lah
+          echo ""
           for gem in *.gem; do
             if [ ! -f "$gem" ]; then
               echo "No gem file found" >&2
               exit 1
             fi
-            echo "Validating $gem..."
+            echo "=========================================="
+            echo "Validating: $gem"
+            echo "=========================================="
+            file "$gem"
+            echo "File size: $(stat -f%z "$gem" 2>/dev/null || stat -c%s "$gem") bytes"
+            echo ""
+            echo "Running gem spec check..."
             if ! gem spec "$gem" >/dev/null 2>&1; then
               echo "WARNING: gem spec check failed, attempting tar validation..."
+              echo "Running tar -tzf check..."
               if ! tar -tzf "$gem" >/dev/null 2>&1; then
                 echo "ERROR: Corrupted gem file: $gem" >&2
+                echo "First 100 bytes (hex):"
+                xxd -l 100 "$gem" || od -t x1 -N 100 "$gem"
                 exit 1
               fi
             fi
-            ls -lh "$gem"
+            echo "✓ Gem file validated successfully"
+            echo ""
           done
 
       - name: Verify gem integrity (Windows)
@@ -1597,7 +1610,7 @@ jobs:
         uses: actions/upload-artifact@v6
         with:
           name: csharp-native-assets-${{ matrix.rid }}
-          path: runtimes/${{ matrix.rid }}/native/*
+          path: runtimes/
           retention-days: 14
 
   csharp-smoke:
@@ -2154,7 +2167,7 @@ jobs:
         working-directory: crates/kreuzberg-wasm
 
       - name: Run npm audit
-        run: npm audit --audit-level=high
+        run: pnpm audit --audit-level=high
         working-directory: crates/kreuzberg-wasm
 
       - name: Extract version from package.json
