--- a/packages/ruby/Rakefile
+++ b/packages/ruby/Rakefile
@@ -9,7 +9,7 @@ GEMSPEC = Gem::Specification.load(File.expand_path('kreuzberg.gemspec', __dir__)
 # Vendor kreuzberg core crates before compilation
 task :vendor do
   vendor_script = File.expand_path('../../scripts/ci/ruby/vendor-kreuzberg-core.sh', __dir__)
-  puts "Vendoring kreuzberg core crates..."
+  puts 'Vendoring kreuzberg core crates...'
   sh "bash #{vendor_script}"
 end
 
