--- a/crates/kreuzberg/Cargo.toml
+++ b/crates/kreuzberg/Cargo.toml
@@ -139,6 +139,7 @@ async-trait = { workspace = true }
 base64 = { workspace = true }
 base64-simd = "0.8"
 bitvec = "1.0"
+dashmap = "5.5"
 simdutf8 = { version = "0.1", optional = true }
 hex = { workspace = true }
 lazy_static = "1.5.0"
@@ -245,6 +246,10 @@ image = { workspace = true, default-features = false, features = ["png"] }
 
 [[bench]]
 name = "otel_overhead"
+harness = false
+
+[[bench]]
+name = "format_validation"
 harness = false
 
 # Only build profiling tooling on non-Windows targets (pprof depends on Unix APIs)
