chore: upgrade to Maven 4 and update all dependencies
- Migrate to Maven 4.0.0-rc-4 with model version 4.1.0
- Update maven-compiler-plugin to 4.0.0-beta-3
- Update maven-source-plugin to 4.0.0-beta-1
- Update Checkstyle to 12.3.0
- Update PMD to 7.19.0
- Update jackson-databind to 2.20.1
- Update junit-jupiter to 6.1.0-M1
- Update assertj-core to 4.0.0-M1
- Fix Java 25 Foreign Function & Memory API compatibility issues
- Enhance task update to actively update all Java dependencies and plugins
- Update Rust, Python, TypeScript, Ruby dependencies via task update

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -362,11 +362,16 @@ tasks:
       - mvn checkstyle:check
       - mvn pmd:check pmd:cpd-check
   java:update:
-    desc: Update Java dependencies
+    desc: Update Java dependencies and plugins (including linters)
     dir: packages/java
     cmds:
-      - echo "Checking for dependency updates..."
+      - echo "Updating Java dependencies and plugins..."
+      - mvn versions:use-latest-releases -DprocessDependencies=true -DprocessParent=false
+      - echo "Updating plugin versions in properties..."
+      - mvn versions:update-properties
+      - echo "Displaying final dependency updates..."
       - mvn versions:display-dependency-updates
+      - echo "Displaying final plugin updates..."
       - mvn versions:display-plugin-updates
   shell:lint:
     desc: Lint shell scripts with auto-fix (shfmt + shellcheck)
