fix(ci): fix OpenSSL detection for Ruby builds on macOS ARM64
Add robust OpenSSL path detection and environment variable export to fix
Ruby native extension builds on GitHub Actions macOS ARM64 runners:

- Add ARM64 (/opt/homebrew) and Intel (/usr/local) fallback paths
- Explicitly export OPENSSL_* variables to cargo subprocesses
- Add verification steps to diagnose OpenSSL setup issues
- Improve logging for OpenSSL detection and installation

This fixes the "OpenSSL errors detected. Verify OPENSSL_DIR is set correctly"
error that prevented Ruby gem builds on macOS ARM64.

Root cause: macos-latest runners switched from Intel to ARM64, changing
Homebrew's OpenSSL installation path from /usr/local to /opt/homebrew.

--- a/.github/workflows/ci-ruby.yaml
+++ b/.github/workflows/ci-ruby.yaml
@@ -103,6 +103,20 @@ jobs:
       - name: Setup OpenSSL
         uses: ./.github/actions/setup-openssl
 
+      - name: Verify OpenSSL setup
+        shell: bash
+        run: |
+          echo "=== OpenSSL Verification ==="
+          echo "Platform: $(uname -m)"
+          echo "OPENSSL_DIR: ${OPENSSL_DIR:-<not set>}"
+          echo "OPENSSL_LIB_DIR: ${OPENSSL_LIB_DIR:-<not set>}"
+          echo "OPENSSL_INCLUDE_DIR: ${OPENSSL_INCLUDE_DIR:-<not set>}"
+          if [ -n "${OPENSSL_DIR:-}" ]; then
+            echo ""
+            echo "Checking for libssl:"
+            find "$OPENSSL_DIR" -name "libssl*" 2>/dev/null | head -5 || echo "No libssl found"
+          fi
+
       - name: Setup Rust
         uses: ./.github/actions/setup-rust
         with:
