fix(python): include .pyi stub files in wheel distributions
Updated maturin include directive to specify both sdist and wheel formats
for _internal_bindings.pyi and py.typed. Previously these files were only
configured for wheel format, causing them to be missing from installed
packages and preventing IDEs from inspecting types from the binary module.

--- a/packages/python/pyproject.toml
+++ b/packages/python/pyproject.toml
@@ -90,8 +90,8 @@ manifest-path = "../../crates/kreuzberg-py/Cargo.toml"
 # No separate library files needed - they are embedded during compilation
 include = [
   # Ensure IDE/type-checker discoverability for the extension module.
-  { path = "kreuzberg/_internal_bindings.pyi", format = "wheel" },
-  { path = "kreuzberg/py.typed", format = "wheel" },
+  { path = "kreuzberg/_internal_bindings.pyi", format = [ "sdist", "wheel" ] },
+  { path = "kreuzberg/py.typed", format = [ "sdist", "wheel" ] },
   # Include the CLI binary (must be built with --features all)
   { path = "kreuzberg/kreuzberg-cli", format = "wheel" },
   { path = "kreuzberg/kreuzberg-cli.exe", format = "wheel" },
