fix(ruby): use steep binstub instead of bundle exec
- Update Taskfile to call ./bin/steep directly
- Fixes bundler PATH issues where bundle exec couldn't find steep
- Binstub generated locally via: bundle binstubs steep --force

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -240,13 +240,13 @@ tasks:
     dir: packages/ruby
     cmds:
       - "{{.BUNDLE}} exec rubocop --config .rubocop.yml --autocorrect-all"
-      - "{{.BUNDLE}} exec steep check"
+      - "./bin/steep check"
   ruby:lint:check:
     desc: Lint Ruby code in check-only mode (rubocop + steep, no fixes)
     dir: packages/ruby
     cmds:
       - "{{.BUNDLE}} exec rubocop --config .rubocop.yml"
-      - "{{.BUNDLE}} exec steep check"
+      - "./bin/steep check"
   ruby:format:
     desc: Format Ruby code with modifications (rubocop)
     dir: packages/ruby
@@ -261,7 +261,7 @@ tasks:
     desc: Run steep type checking
     dir: packages/ruby
     cmds:
-      - "{{.BUNDLE}} exec steep check"
+      - "./bin/steep check"
   ruby:console:
     desc: Open Ruby console with Kreuzberg loaded
     dir: packages/ruby
