fix: resolve FFI compilation errors and skip CI on profiling branch
CI Workflow Updates:
- Add feat/profiling-flamegraphs to branches-ignore in all 10 CI workflows
- Prevents expensive CI runs on profiling/benchmarking branches

Python FFI Fixes (kreuzberg-py/src/ffi.rs):
- Remove unused imports: c_char, CErrorDetails
- Fix lifetime elision: Python -> Python<'_>
- Remove unnecessary unsafe blocks (kreuzberg_get_error_details, kreuzberg_error_code_name)

TypeScript FFI Fixes (kreuzberg-node/src/lib.rs):
- Make CMetadataField struct public to fix private-interfaces error
- Add #[allow(improper_ctypes)] for opaque pointer types (ExtractionConfig, RustExtractionResult)

FFI Core Fixes (kreuzberg-ffi/src/error.rs):
- Remove 18 unnecessary unsafe blocks wrapping C string literals
- C string literals (c"...") are safe in Rust 2024

Dependency Updates (from main rebase):
- Upgrade dashmap: 5.5.3 -> 6.1.0
- Upgrade criterion: 0.5 -> 0.8.1

All code compiles with zero warnings under -D warnings.

--- a/.github/workflows/ci-csharp.yaml
+++ b/.github/workflows/ci-csharp.yaml
@@ -5,6 +5,7 @@ on:
     branches-ignore:
       - 'benchmarking-*'
       - 'profiling-*'
+      - 'feat/profiling-flamegraphs'
     paths:
       - '.github/actions/**'
       - 'crates/kreuzberg/**'
