--- a/.github/workflows/ci-docker.yaml
+++ b/.github/workflows/ci-docker.yaml
@@ -2,8 +2,10 @@ name: CI Docker Build & Test
 
 on:
   push:
-    branches:
-      - main
+    branches-ignore:
+      - 'benchmarking-*'
+      - 'profiling-*'
+      - 'feat/profiling-flamegraphs'
     paths:
       - '.github/actions/**'
       - 'crates/kreuzberg/**'
