fix: resolve CI workflow failures across all packages
- fix(wasm): add #[allow(dead_code)] to conditionally compiled function
- fix(java): update Maven plugins to rc-1 and Java version to 25
- fix(ruby): rename unused ruby parameters and update RHash API usage
- fix(python): add missing validation functions to __all__ exports
- fix(go): remove duplicate non-existent FFI function declarations
- fix(ci): add [project] section to root pyproject.toml for validation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,21 @@
 build-backend = "maturin"
 requires = [ "maturin>=1.10.2" ]
 
+[project]
+name = "kreuzberg-workspace"
+version = "4.0.0-rc.16"
+description = "Kreuzberg - Rust document intelligence library with polyglot bindings"
+requires-python = ">=3.10"
+
+classifiers = [
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
+]
+
 [dependency-groups]
 dev = [
   "covdefaults>=2.3.0",
