--- a/packages/java/pom.xml
+++ b/packages/java/pom.xml
@@ -43,16 +43,16 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.release>25</maven.compiler.release>
         <junit.version>5.11.4</junit.version>
         <maven.version>4.0.0-rc-4</maven.version>
-        <maven-compiler-plugin.version>4.0.0-beta-3</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>4.0.0-rc-1</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
-        <maven-resources-plugin.version>4.0.0-beta-1</maven-resources-plugin.version>
-        <maven-clean-plugin.version>4.0.0-beta-2</maven-clean-plugin.version>
-        <maven-jar-plugin.version>4.0.0-beta-1</maven-jar-plugin.version>
-        <maven-install-plugin.version>4.0.0-beta-2</maven-install-plugin.version>
-        <maven-deploy-plugin.version>4.0.0-beta-2</maven-deploy-plugin.version>
+        <maven-resources-plugin.version>4.0.0-rc-1</maven-resources-plugin.version>
+        <maven-clean-plugin.version>4.0.0-rc-1</maven-clean-plugin.version>
+        <maven-jar-plugin.version>4.0.0-rc-1</maven-jar-plugin.version>
+        <maven-install-plugin.version>4.0.0-rc-1</maven-install-plugin.version>
+        <maven-deploy-plugin.version>4.0.0-rc-1</maven-deploy-plugin.version>
         <maven-site-plugin.version>4.0.0-M16</maven-site-plugin.version>
         <maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version>
         <maven-pmd-plugin.version>3.28.0</maven-pmd-plugin.version>
@@ -61,7 +61,7 @@
         <build-helper-maven-plugin.version>3.6.1</build-helper-maven-plugin.version>
         <checkstyle.version>12.3.0</checkstyle.version>
         <pmd.version>7.19.0</pmd.version>
-        <maven-source-plugin.version>4.0.0-beta-1</maven-source-plugin.version>
+        <maven-source-plugin.version>4.0.0-rc-1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
         <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
         <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
@@ -153,7 +153,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <release>21</release>
+                    <release>25</release>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                     </compilerArgs>
