--- a/.github/actions/setup-maven-4/action.yaml
+++ b/.github/actions/setup-maven-4/action.yaml
@@ -1,13 +1,13 @@
-name: Setup Maven 4
-description: Install Maven 4.0.0-rc-4 in a cross-platform way
+name: Setup Maven 3.9.12
+description: Install Maven 3.9.12 in a cross-platform way
 runs:
   using: composite
   steps:
-    - name: Setup Maven 4
+    - name: Setup Maven 3.9.12
       shell: bash
       run: |
-        MAVEN_VERSION="4.0.0-rc-4"
-        MAVEN_URL="https://archive.apache.org/dist/maven/maven-4/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz"
+        MAVEN_VERSION="3.9.12"
+        MAVEN_URL="https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz"
 
         # Use a temp directory that works across platforms
         TEMP_DIR="$(pwd)/maven-temp"
