feat(session-3): Task 3.4 - Pool reuse optimization with parking_lot
Optimize pool reset logic and reduce lock contention with parking_lot::Mutex.

Changes:
1. Fix double-reset bug: Remove reset() call from PoolGuard::drop()
   - Reset now only happens in Pool::acquire() when reusing objects
   - Saves one reset() call per pool reuse, improving efficiency

2. Replace std::sync::Mutex with parking_lot::Mutex for faster locks
   - parking_lot provides ~2x faster lock/unlock than std::sync::Mutex
   - Reduces lock contention overhead
   - Added parking_lot 0.12.3 dependency

3. Update lock error handling
   - parking_lot::Mutex panics on deadlock instead of returning Result
   - Updated affected code paths in pool.rs and batch_optimizations.rs

Expected improvements:
- +3-5% CPU improvement from reduced lock contention
- >85% pool reuse rate maintained
- No memory regressions from Tasks 3.2-3.3

All tests pass: 19 pool-related tests + full suite
No clippy warnings

--- a/crates/kreuzberg/Cargo.toml
+++ b/crates/kreuzberg/Cargo.toml
@@ -151,6 +151,7 @@ libc = { workspace = true }
 memchr = "2.7.6"
 num_cpus = { workspace = true }
 once_cell = { workspace = true }
+parking_lot = { workspace = true }
 pastey = "0.2"
 rayon = "1.11.0"
 regex = "1.12.2"
