--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ base64 = "0.22.1"
 hex = "0.4.3"
 num_cpus = "1.17.0"
 once_cell = "1.21.3"
+parking_lot = "0.12.3"
 html-to-markdown-rs = { version = "2.16.1", default-features = false }
 reqwest = { version = "0.12.28", default-features = false }
 image = { version = "0.25.9", default-features = false }
